2004-06-08  Denins Smit  <ds@nerds-incorporated.org>

	* cdplayer.c (cdplayer_play_pause): Fixed two compile
	warnings.

2004-06-08  Michael Terry  <mike@mterry.name>

	* cdplayer.c, cdplayer.h: Use /apps/gnome-cd/device as
	default cdrom device instead of our own home-brewed gconf key.  Fixes
	bug 93620.
	* Makefile.am: Remove references to now-unused schema file.

2004-06-01  Dennis Smit  <ds@nerds-incorporated.org>

	* cdplayer.h: Added error_io_dialog and error_busy_dialog widgets
	to the applet structure.

	* cdplayer.c (applet_fill): Initialize the error dialogs with NULL.
	(cdplayer_destroy): Destroy the error dialogs.
	(cdplayer_play_pause): Show an dialog on IO error, and let both
	dialogs be privates per instance.

	Based on a fix by: Santhosh  <santhu842k2@yahoo.co.in>

	Fixes bug #142093.

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Add inlinepixbuf to SOURCES. Should fix one
	distcheck issue.
	* docs/ja/*: Adding ja docs since the author didn't get
	back to me.

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* docs/Makefile.am: Add l10n'd docs to the build.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Add localized documentation for de, es, fr, it,
	ko, sv, zh_CN, zh_HK and zh_TW.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* cdplayer.c (about_cb):
	Reset the right screen if the user requests
	the about dialog.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* cdplayer.c (start_gtcd_cb):
	Auto indent touched a few things i shouldn't have
	in previous commit.

2004-02-22  Dennis Smit  <ds@nerds-incorporated.org>

	* cdplayer.c (start_gtcd_cb):
	Move from egg_screen_execute_command_line_async to
	gdk_spawn_command_line_on_screen.

	Fixes bug #135158.

2004-02-17  Kevin Vandersloot

	* Makefile.am: dist cdrom-netbsd. Patch from Julio M. Merino Vidal. Fixes bug
	#134657.

2004-02-11 Breda McColgan <breda.mccolgan@sun.com>

	* docs/C/cdplayer.xml: Updated for GNOME 2.6.