@@ -7,5 +7,4 @@ Makefile
 cdplayer_applet2
 GNOME_CDPlayerApplet.server
 GNOME_CDPlayerApplet.server.in
-cdplayer.schemas
 inlinepixbufs.h
