@@ -1,14 +1,0 @@
-<gconfschemafile>
-    <schemalist>
-        <schema>
-            <key>/schemas/apps/cdplayer-applet/prefs/device_path</key>
-            <owner>cdplayer-applet</owner>
-            <type>string</type>
-            <default>none</default>
-            <locale name="C">
-                <short>Path to the device</short>
-                <long>This is the full path of the device that will be used to play cd's from this applet</long>
-            </locale>
-        </schema>
-    </schemalist>
-</gconfschemafile>
