@@ -1,3 +1,7 @@
+2004-08-11  Mark McLoughlin  <mark@skynet.ie>
+
+	* cdplayer.schemas.in: remove - we're now using /apps/gnome-cd/device
+
 2004-06-08  Denins Smit  <ds@nerds-incorporated.org>
 
 	* cdplayer.c (cdplayer_play_pause): Fixed two compile
